<resources>
    <string name="app_name">Demo DatabaseCRUD</string>
    <string name="tv1">Enter data to be entered here</string>
    <string name="b1">Insert</string>
    <string name="b2">Edit</string>
    <string name="b3">Retrieve</string>
    <string name="b4">Update</string>
    <string name="b5">Delete</string>
    <string name="a">Content:</string>
    <string name="b">ID:</string>

</resources>